# aki-stats

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  TODO.md
.github/workflows/: test-ubuntu.yml
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  mod.rs  parse.rs
src/util/: mod.rs  opt_locale_loc.rs  opt_uc_x_param.rs
tests/: debug.rs  helper.rs  test.rs  test_e.rs  test_l.rs  test_s.rs
xtask/src/: aki-stats-cmd.txt  cmd.txt  gen_src_cmd.rs
