[package]
name = "aki-stats"
version = "0.1.18"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
output the statistics of text, like a wc of linux command.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.63.0"
repository = "https://github.com/aki-akaguma/aki-stats"

[lib]
name = "libaki_stats"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-stats"
path = "src/main.rs"

[features]
default = []
debian_build = []

[dependencies]
anyhow = "1.0"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
num-format = "0.4"
runnel = "0.4"
memx-cdy = "0.1"

[dev-dependencies]
indoc = "2.0"
exec-target = "0.2"

[build-dependencies]
rust-version-info-file = "0.1"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program output the statistics of text, like a wc of linux command.
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/aki-stats", "usr/bin/aki-stats", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/aki-stats/", "644"],
    ["README.md", "usr/share/doc/aki-stats/", "644"],
]
